--- a/blog/2015007.md
+++ b/blog/2015007.md
@@ -29,7 +29,7 @@ My route took me via the UK HQ of [MSF](http://www.msf.org.uk) where I met some 
 
 ![landscape](https://farm1.staticflickr.com/389/19263376898_b18c862bde_z_d.jpg "Hammersmith bridge")
 
-Over the Hammersmith bridge I reached Barnes Common 130 years too late for a [tricycle rally](http://www.strudel.org.uk/blog/stevens/000134.shtml#blog). I headed south through the glorious Richmond Park which is a green oasis in the urban sprawl. There was a herd of deer. Arriving into Kingston I rode for a short distance with a guy called Andy. In Surbiton I had a great welcome from my friend Tracey and her parents.
+Over the Hammersmith bridge I reached Barnes Common 130 years too late for a [tricycle rally](http://www.strudel.org.uk/blog/stevens/000134.shtml#blog). I headed south through the glorious Richmond Park which is a green oasis in the urban sprawl. There was a herd of deer. Arriving into Kingston I rode for a short distance with a guy called [Andy](https://twitter.com/SansomAndy). In Surbiton I had a great welcome from my friend Tracey and her parents.
 
 ![landscape](https://farm8.staticflickr.com/7684/17499134942_bc88066a12_z_d.jpg "Deer in Richmond Park")
 
