--- a/blog/2015010.md
+++ b/blog/2015010.md
@@ -11,6 +11,8 @@ Cycling out of Dieppe so early in the morning sun meant little traffic and a gen
 
 ![landscape](https://farm9.staticflickr.com/8721/17535203446_2a956d0b73.jpg "Normandy")
 
+On the ride out of Dieppe I stopped at a small petrol station where I bought a pain au chocolat and [filled my water bottle with Orangina](https://twitter.com/RTWbike/status/598031874209030144). When in France.
+	
 ![landscape](https://farm9.staticflickr.com/8822/17561040711_4326c3c0c4.jpg "Normandy")
 
 ![landscape](https://farm1.staticflickr.com/362/19444789852_fea820d40f_z_d.jpg "Bus shelter food stop")
