--- a/blog/2015027.md
+++ b/blog/2015027.md
@@ -3,25 +3,22 @@ Title:	Imperial century
 Date:	2015-05-29T21:00:00+0200
 ---
 
-After leaving the Gasthaus I went to find toilet and discovered a huge 
-car park, under kapellplatz, built in 1983. I left Altoetting and headed 
-for the Inn river trail again. It was nice to be on it so early and I 
-cheerily said "hallo" to those on bikes going in the opposite direction. 
-I passed through Marktl where the last pope - the one who resigned - had 
-been born. At Simbach am Inn I headed into the town centre to see what 
-was there. Not a lot it turned out except for some free WiFi in the main 
-square and I discovered it was twinned with Skipton in North Yorkshire. 
-Time was moving on and so should I. It was time to cross the river into 
-Austria. Unlike in Stevens's day there is no longer a border guard (yay 
-for Shengen) and I didn't have to change my currency. I joined the 
-Austrian version of the Inn river bike trail which started off quite 
-rough but improved. As I left the environs of the Inn I spotted an 
-impressive tree house complete with metal shutters on the window. At 
-Altheim I stopped for lunch like Stevens but a day late due to my phone 
-trouble. It was a nice outside beer garden in the main street and I 
-chose it partly because a crew of elderly cyclists were dining there 
-already.
+After leaving the Gasthaus I went to find toilet and discovered a huge car park, under kapellplatz, built in 1983. I left Altötting and headed for the Inn river trail again. It was nice to be on it so early and I cheerily said "hallo" to those on bikes going in the opposite direction. [I passed through Marktl](https://twitter.com/RTWbike/status/604214617796136960) where the last pope - the one who resigned - had been born. At Simbach am Inn I headed into the town centre to see what was there. Not a lot it turned out except for some free WiFi in the main square and I discovered [it was twinned with Skipton](https://twitter.com/RTWbike/status/604215009867079680) in North Yorkshire. 
+
+![landscape](https://farm1.staticflickr.com/441/18738235312_b5beee2579_z_d.jpg "The bridge at Simbach am Inn over into Austria")
+
+Time was moving on and so should I. It was time to cross the river into Austria. Unlike in Stevens's day there is no longer a border guard (yay for Shengen) and I didn't have to change my currency. I joined the Austrian version of the Inn river bike trail which started off quite rough but improved. As I left the environs of the Inn I spotted [an impressive tree house](https://twitter.com/RTWbike/status/604242693812817920) complete with metal shutters on the window. At Altheim I stopped for lunch like Stevens but a day late due to my phone trouble. It was a nice outside beer garden in the main street and I chose it partly because a crew of elderly cyclists were dining there already.
 
 I left Altheim at 2pm already worried I'd been taking things too slow. Especially as Stevens wrote about an "aggravatingly hilly" road ahead. As he hardly noted the giant hill near Oppenau that had me worried.
 
-After a few days of relative flatness it did indeed get more hilly. This is mostly because Stevens kept a pretty direct line east rather than following the curve of the river. I got pretty exhausted just before Haag am Haustruck due to a big climb. It did result it a stunning view to the north and gave me a freewheel down into Haag which I managed to reach by 5pm. That still left me 24 hours behind. After loading up on drinks and sweets at the shop I decided to press on the extra miles to Lambach. Once there I realised it was another 10 or so miles to Eels where there was a youth hostel. There website and the Wels website didn't mention their reception hours so I rang up. They said they spoke "a little English" but that phrase was actually the extent of it so I still didn't know. I decided to push on following the Train river trail. I pushed hard despite still being exhausted from the hills. I arrived at 7.17pm to discover a sign on their door saying their hours were 5-7pm! Using the world's slowest 3G I spent an hour trying to find an alternative in the fading light. Eventually I had to give in and stay at the cheapest hotel I could find. Two days budget gone on one night. I took the opportunity to at least rinse my most smelly clothes from the day in the sink. For dinner I had to make do with bread and cheese left over from Munich washed down with Nutella.
+After a few days of relative flatness it did indeed get more hilly. This is mostly because Stevens kept a pretty direct line east rather than following the curve of the river. I got pretty exhausted just before Haag am Haustruck due to a big climb. It did result it a stunning view to the north and gave me a freewheel down into Haag which I managed to reach by 5pm. That still left me 24 hours behind. After loading up on drinks and sweets at the shop I decided to press on the extra miles to Lambach. 
+
+![landscape](https://www.flickr.com/photos/astronomyblog/18114781593/sizes/l "Nearing Haag")
+
+![landscape](https://farm1.staticflickr.com/487/18735499375_f14fda8627_z_d.jpg "Between Haag and Lambach")
+
+![landscape](https://farm1.staticflickr.com/344/19592589851_e8cef40c60_z_d.jpg "Austrian Alps seen from the road to Lambach")
+
+![landscape](https://farm4.staticflickr.com/3725/19588229375_62c9b06736_z_d.jpg "Austrian Alps seen from the road to Lambach")
+
+In Lambach I realised it was another 10 or so miles to Wels where there was a youth hostel. There website and the Wels website didn't mention their reception hours so I rang up. They said they spoke "a little English" but that phrase was actually the extent of it so I still didn't know. I decided to push on following the Train river trail. I pushed hard despite still being exhausted from the hills. I arrived at 7.17pm to discover a sign on their door saying their hours were 5-7pm! Using the world's slowest 3G I spent an hour trying to find an alternative in the fading light. Eventually I had to give in and stay at the cheapest hotel I could find. Two days budget gone on one night. I took the opportunity to at least rinse my most smelly clothes from the day in the sink. For dinner I had to make do with bread and cheese left over from Munich washed down with Nutella.
