--- a/blog/2015008.md
+++ b/blog/2015008.md
@@ -3,13 +3,13 @@ Title:	To the English Channel
 Date:	2015-05-10T21:50:00+0100
 ---
 
-On Saturday morning I said goodbye to my friend Tracey and headed out of Surbiton through Surrey. There were still quite a few busy London roads to go and negotiating the roundabout over the M25 required confidence. At this point I realised I'd lost my good warm jacket which I thought I'd secured under the bungees on the back of my bike. These two things knocked my mood and left me a bit despondent.
+On Saturday morning I said goodbye to my friend Tracey and headed out of Surbiton through Surrey. There were still quite a few busy London roads to go and negotiating the roundabout over the M25 required confidence. At this point [I realised I'd lost my good warm jacket](https://twitter.com/RTWbike/status/597003522756980736) which I thought I'd secured under the bungees on the back of my bike. These two things knocked my mood and left me a bit despondent.
 
 I thought hitting National Cycle Network 21 would cheer me up but its constant stopping and starting, the endless give ways, the traffic lights that wouldn't change for bikes and the poor signage in places brought my mood down more. After winding through Gatwick airport I got to NCN 20 which went through woods and had gates that proved tough for a bike with panniers.
 
 ![landscape](https://farm1.staticflickr.com/464/19264807179_eab88094b7_z_d.jpg)
 
-With 21 miles to go to Brighton I had to stop for a rest as my knee was becoming painful. It had been getting worse since day two. I was no longer sure I'd get to Brighton never mind Istanbul. On another eight painful miles I stopped at a bluebell-filled wood. I sat down amongst the bluebells for food and juice. I gave two deer a surprise - and them, me - as they bounded around me.
+With 21 miles to go to Brighton I had to stop for a rest as my knee was becoming painful. It had been getting worse since day two. I was no longer sure I'd get to Brighton never mind Istanbul. On another eight painful miles I stopped at a bluebell-filled wood. [I sat down amongst the bluebells](https://twitter.com/RTWbike/status/597063923809067008) for food and juice. I gave two deer a surprise - and them, me - as they bounded around me.
 
 ![portrait](https://farm1.staticflickr.com/420/19264855799_1e30efffd5_z_d.jpg "Bluebell-filled wood")
 
