--- a/blog/2015012.md
+++ b/blog/2015012.md
@@ -5,6 +5,12 @@ Date:	2015-05-140T21:42:00+0200
 
 It rained through the night so in the morning I did my best to dry my tent. Clotilde lent me their foot pump to get my tyres back to pressure. Once they were packed up they set off on their impressive tandem and trailer. I left a couple of minutes behind them. By 10.30 I was in Mantes-la-jolie and once again decided to over-rule my GPS and go the quieter roads. These proved hilly but pleasant and helped by the courteous drivers. In Maule I happened to glimpse Clotilde and Pierre in a bus shelter. I stopped and joined them for lunch. They had just boiled up some minestrone. It was so nice to meet them again. After lunch our paths really did diverge as I headed fort Saint Germain and they went more south.
 
+![landscape](https://farm1.staticflickr.com/446/19455665431_4d2eac3034_z_d.jpg "Village")
+
+![landscape](https://farm1.staticflickr.com/512/19455673221_e1fda55c9a_z_d.jpg)
+
+![landscape](https://farm1.staticflickr.com/362/18830798453_7b35f9808a_z_d.jpg "Reunited with Clotilde and Pierre for lunch")
+
 ![panorama](https://farm8.staticflickr.com/7683/17013926264_3083f358c7.jpg "countryside")
 
 ![landscape](https://farm6.staticflickr.com/5350/17636586711_b65e8ed672.jpg "wheat")
@@ -15,4 +21,8 @@ After the deluge had abated I set off again through the charming Saint Germain e
 
 I reached Port Maillot and then another mile to the Arc de Triomphe for an obligatory photo opportunity. Here I got a crepe with Nutella for two-thirds the price of one on Brighton pier.
 
+![landscape](https://farm1.staticflickr.com/323/19451435975_8b15666b5d_z_d.jpg "Port Maillot")
+
 ![portrait](https://farm8.staticflickr.com/7740/17619565296_2cf563377a.jpg "Arrival at the Arc de Triomphe")
+
+![landscape](https://farm1.staticflickr.com/287/19263887588_963ca3e46d_z_d.jpg "Champs Elysse")
