--- a/blog/2015026.md
+++ b/blog/2015026.md
@@ -3,6 +3,10 @@ Title:	Phone troubles
 Date:	2015-05-28T18:00:00+0200
 ---
 
-I was up early as Franz was going to pick me up at 8am. My phone alarm  went off at the usual time of 7.30 and the only way to stop the noise  was to mute the sound with the volume buttons. After breakfast Franz  arrived and we went to his portacabin office at the hydro plant where I  tried to find a solution. The best the manufacturer - Sony - could  suggest was that I send it to them and they may fix it in 5-7 days from  arrival. They couldn't tell me how much it would cost and couldn't  advise on how I might get it fixed by Sony Germany. Useless. So Franz  took me to an electrical store where they also said it could take a  week. The only practical solution was for me to buy a new phone. I got  an 86 euro basic model then Franz drove me back to the hotel as he had  to drive to Vienna. Huge thanks to Franz for being so calming and helpful.
+I was up early as Franz was going to pick me up at 8am. My phone alarm went off at the usual time of 7.30 and the only way to stop the noise was to mute the sound with the volume buttons. After breakfast Franz arrived and we went to his portacabin office at the hydro plant where I tried to find a solution. The best the manufacturer - Sony - could suggest was that I send it to them and they may fix it in 5-7 days from arrival. They couldn't tell me how much it would cost and couldn't advise on how I might get it fixed by Sony Germany. Useless. So Franz took me to an electrical store where they also said it could take a week. The only practical solution was for me to buy a new phone. I got an 86 euro basic model then Franz drove me back to the hotel as he had to drive to Vienna. Huge thanks to Franz for being so calming and helpful.
 
-I spent the morning and afternoon wandering around Altoetting failing to find free WiFi that works so I could update the phone software. I currently have a half functioning phone which is an improvement at least. I will now catch up on sleep and try to get an early start tomorrow to catch up on the day's cycling I've missed.
+![landscape](https://farm4.staticflickr.com/3731/19264522208_ff58610c93_z_d.jpg "Franz")
+
+I spent the morning and afternoon wandering around Altötting failing to find free WiFi that works so I could update the phone software. I currently have a half functioning phone which is an improvement at least. I will now catch up on sleep and try to get an early start tomorrow to catch up on the day's cycling I've missed.
+
+![panorama](https://farm1.staticflickr.com/384/19552148002_36c2fedbe9_k_d.jpg "Altötting main square")
