--- a/blog/2015028.md
+++ b/blog/2015028.md
@@ -3,10 +3,22 @@ Title:	Back to the Danube
 Date:	2015-05-30T21:00:00+0200
 ---
 
-I took full advantage of loading up my stomach at breakfast and got an 
-earlyish start. The temperatures were getting hotter and it was blue 
-skies. I was going to melt.
+I took full advantage of loading up my stomach at breakfast and got an earlyish start. The temperatures were getting hotter and it was blue skies. I was going to melt.
 
-On the way out of Wels I randomly discovered Juipter which meant I was on another planet path. There was lots of nice bike trail that thankfully became wooded giving me some shade. Unfortunately the trail ended near Traun and my GPS decided the bike trails cut the corner off the bend of the river. Of course that meant hills. These weren't too bad and I even had some forest cover at some point. Down the other side to the Danube and I reunited with the Eurovelo 6. I decided to have a rest and a banana at one nice spot with a good view along the river. There was a bench but it was occupied by two other touring cyclists. I must have looked longingly at it because the lady asked if I wanted to sit down. She asked in English! The couple turned out to bevJane and John from Swansea who were cycling to Vienna along the Danube. They'd been in Blaubeuren and Ulm but had sensibly stuck with the river rather than strike a direct line over the hills as Stevens had. It was really nice to have a conversation and I ended up cycling with them to Wallsee. Unfortunately that meant I'd gone 3 miles beyond Strengberg so I had to head backwards. There followed a bit of cursing of Stevens as I realised Strengberg was up a big hill. Seriously Thomas, why not stay in the flat of the Danube valley?
+![landscape](https://farm1.staticflickr.com/267/18547719328_60440aa595_z_d.jpg "Field of purple")
+
+On the way out of Wels [I randomly discovered Jupiter](https://twitter.com/RTWbike/status/604553102621044736) which meant I was on another planet path. There was lots of nice bike trail that thankfully became wooded giving me some shade. Unfortunately the trail ended near Traun and my GPS decided the bike trails cut the corner off the bend of the river. Of course that meant hills. These weren't too bad and I even had some forest cover at some point. Down the other side to the Danube and I reunited with the Eurovelo 6. I decided to have a rest and a banana at one nice spot with a good view along the river. There was a bench but it was occupied by two other touring cyclists. I must have looked longingly at it because the lady asked if I wanted to sit down. She asked in English! The couple turned out to be Jane and John from Swansea who were cycling to Vienna along the Danube. They'd been in Blaubeuren and Ulm but had sensibly stuck with the river rather than strike a direct line over the hills as Stevens had. It was really nice to have a conversation and I ended up cycling with them to Wallsee. 
+
+![panorama](https://farm4.staticflickr.com/3764/18967175084_1b7a48865b_k_d.jpg "Stopping for a banana at the Danube")
+
+![landscape](https://farm1.staticflickr.com/293/19266348639_c93884acf1_z_d.jpg "Jane and John from Swansea")
+
+![landscape](https://farm1.staticflickr.com/310/19426429896_fe1e829dbe_z_d.jpg "Me with Jane")
+
+Unfortunately that meant I'd gone 3 miles beyond Strengberg so I had to head backwards. There followed a bit of cursing of Stevens as I realised Strengberg was up a big hill. Seriously Thomas, why not stay in the flat of the Danube valley?
+
+![landscape](https://farm1.staticflickr.com/323/19426435866_aed7632ba5_z_d.jpg "Strengberg")
 
 The town was closed. Even the shop only did half day trading on a Saturday so it was back down the hill (couldn't get the full benefits due to a blind bend) and back up the other side to Well see. I decided to press on back to the EV6. Reaching Ardagger I saw one of the motorhome parks that they had in France - basically a bit of ground provided by the village with some electrical hook up points and a toilet block. This one had some grass though so being braver I asked a motorhomer if I could camp. They said "why not? give it a go" so I did. I boiled up some water and made tea and minestrone as the church bells rang out. The Morrison's Cafe milk sachets I've been carrying proved useful.
+
+![landscape](https://farm1.staticflickr.com/394/19264950750_81c34d35fa_z_d.jpg "Hills")
