--- a/blog/2015029.md
+++ b/blog/2015029.md
@@ -3,10 +3,40 @@ Title:	To Vienna
 Date:	2015-05-31T21:00:00+0200
 ---
 
-Packing up my tent I had to deal with ants crawling over all my stuff again. I wish we could come to a peace negotiation. I headed off along the pleasant [EV6](http://www.eurovelo.com/en/eurovelos/eurovelo-6/countries/austria) into an impressive valley cut by the mighty river Danube. The EV6 goes along both banks at this point but I stuck to the south side reasoning that it would provide more shade for me and better lighting of the north for photographs. It was very pleasant and I stopped for breakfast at a little cafe where I was the only customer early on a Sunday morning. Enjoyable miles took me to Ybbs where there were lots of signs along the trail advertising a bicycle museum. Unfortunately for me, and the other cyclists who'd had their interest piqued, it was shut on a Sunday. If only I'd been a day earlier like Stevens.
+Packing up my tent I had to deal with ants crawling over all my stuff again. I wish we could come to a peace negotiation.
+
+I headed off along the pleasant [EV6](http://www.eurovelo.com/en/eurovelos/eurovelo-6/countries/austria) into an impressive valley cut by the mighty river Danube. The EV6 goes along both banks at this point but I stuck to the south side reasoning that it would provide more shade for me and better lighting of the north for photographs. It was very pleasant and I stopped for breakfast at a little cafe where I was the only customer early on a Sunday morning. 
+
+![landscape](https://farm1.staticflickr.com/492/18112895084_ceae9085b4_z_d.jpg "Danube and the EV6")
+
+![landscape](https://farm1.staticflickr.com/422/19266398859_1b43818a95_z_d.jpg "Across the Danube")
+
+![landscape](https://farm1.staticflickr.com/415/19426475946_b71aee9b56_z_d.jpg "Across the Danube")
+
+Enjoyable miles took me to Ybbs where there were lots of signs along the trail advertising a bicycle museum. Unfortunately for me, and the other cyclists who'd had their interest piqued, it was shut on a Sunday. If only I'd been a day earlier like Stevens.
+
+![landscape](https://farm1.staticflickr.com/292/19264993908_483e4d4b5d_z_d.jpg "Sign to the bicycle museum")
+
+![landscape](https://farm1.staticflickr.com/301/18831954373_952a18c1d0_z_d.jpg "Ducks on the Danube")
+
+![landscape](https://farm1.staticflickr.com/545/19265001690_12ace234a9_z_d.jpg "Poppies")
 
 Onwards to Melk and the impressive monastery Stevens had mentioned. It certainly was big and still dominates the town. As I approached, I had to deal with clueless tourists pouring out of a Viking River Cruise boat into the cycle path. Then I got surrounded by a similarly unaware group of perhaps 20 touring cyclists all wearing matching green Lycra. In trying to get away from them I nearly came off my bike. In Melk I enquired at the tourist information about the oldest barbers to see if I could find where [Thomas had a shave](http://www.strudel.org.uk/blog/stevens/000162.shtml). The lady in the tourist information office was confused by my request and told me they would be shut because it was Sunday. I said it didn't matter. I think she preferred the sort of questions from the cruise ship tourists.
 
-After a nice ice cream and a look around, with a heavy heart I left the flat and pretty EV6 to head across country. Unlike the previous diversions 'in-land' though this didn't look as hilly. That was true in parts. The cycle routes tended to follow the non-hypotenuse sides of triangles with the motorway taking the direct route. I reached Neulengbach where Thomas had stayed on the Saturday night. It didn't look to have much in the way of accommodation and a call to a youth hostel in Vienna indicated their reception was open 24 hours. I decided I'd press on and catch up. The only drawback was that Google Maps showed a huge hill. A well placed petrol station supplied me with juice as I'd exhausted all my liquid reserves. The hill was big but the downhill was glorious and long. It lasted about 15 miles to Vienna - several miles of which I stayed on the tail of a guy on a road bike much to his surprise and amusement.
+![landscape](https://farm1.staticflickr.com/502/18831965403_5ba22a666b_z_d.jpg "Melk")
+
+![landscape](https://farm1.staticflickr.com/340/18709318116_9636a13e12_z_d.jpg "Band in Melk")
+
+After a nice ice cream and a look around, with a heavy heart I left the flat and pretty EV6 to head across country. Unlike the previous diversions 'in-land' though this didn't look as hilly. That was true in parts. The cycle routes tended to follow the non-hypotenuse sides of triangles with the motorway taking the direct route. 
+
+![panorama](https://farm1.staticflickr.com/468/18555332058_f5986a9151_k_d.jpg "Windfarms between Melk and Neulengbach")
+
+![portrait](https://farm1.staticflickr.com/320/18830099574_78b2ca5cb4_z_d.jpg "Windfarms between Melk and Neulengbach")
+
+![landscape](https://farm1.staticflickr.com/262/18555361528_90461e993f_z_d.jpg "Bike")
+
+I reached Neulengbach where Thomas had stayed on the Saturday night. It didn't look to have much in the way of accommodation and a call to a youth hostel in Vienna indicated their reception was open 24 hours. I decided I'd press on and catch up. The only drawback was that Google Maps showed a huge hill. A well placed petrol station supplied me with juice as I'd exhausted all my liquid reserves. The hill was big but the downhill was glorious and long. It lasted about 15 miles to Vienna - several miles of which I stayed on the tail of a guy on a road bike much to his surprise and amusement.
 
 As I got into the city I found a river-side bike path for a few miles. In the city, lots of people were on bikes and there were plenty of bike lanes. I got freaked out by polite motorists giving way when bike lanes crossed roads. UK drivers wouldn't dream of doing that; at least not universally enough to trust that they would. The youth hostel was all the way across the city so it was getting dark as I arrived. I'd broken the Imperial century (100 miles), was exhausted, famished, but had at least caught up with Thomas. And he was giving me a few days off to recover!
+
+![landscape](https://farm1.staticflickr.com/428/19452599405_b83f6b7e78_z_d.jpg "River-side bike path in Vienna")
