--- a/blog/2015030.md
+++ b/blog/2015030.md
@@ -9,4 +9,17 @@ I was in a major capital city full of sights but I really needed to do some laun
 
 On Tuesday, I decided to visit the Vienna Wanderers' Bicycle Club as Stevens had done. The problem is that they don't exist any more and neither does the street they were on; Schwimmschulenstrasse. [Marie O'Sullivan on Twitter](https://twitter.com/Reesiepie/status/605425446864461825) managed to find out that it was near the station ([grid reference F3 in an old map of Vienna](http://www.retrobibliothek.de/retrobib/seite.html?id=116717&imageview=true)) only Schwimmschulenstrasse between 1873-1919. It was now Lassallestrasse. Even though the bicycle club didn't exist, I visited anyway and rode the length of the street. Afterwards I stumbled across an impromptu solar system scale model in the street near the station that was organised by the Zeiss Planetarium Wien. I then wandered over to the big wheel and had a ride through the large park. I then cycled over to the main part of the city and whiled away the afternoon snoozing in the pleasant Rathausplatz park near the Rathaus (town hall).
 
-Wednesday was my last full day in Vienna so I went to the MuseumsQuartier to visit _mumok_ - the museum of modern art. It had everything from David Hockney ([pleased to see him labelled as "Bradford, Yorkshire"](https://twitter.com/RTWbike/status/606073606028853249)) to Yoko Ono to videos of naked bodies having paint thrown at them. Outside the MuseumsQuartier was a [vegan festival](https://twitter.com/RTWbike/status/606152094505177089) and I had a very nice vegan curry with lassi.
+![landscape](https://farm1.staticflickr.com/270/18120510924_5312ca680a_z_d.jpg "Jupiter")
+
+![landscape](https://farm1.staticflickr.com/270/18120510924_5312ca680a_z_d.jpg "Big wheel")
+
+![portrait](https://farm1.staticflickr.com/437/19265085298_9c4f7045d5_z_d.jpg "Biking in the park")
+
+![landscape](https://farm1.staticflickr.com/513/18120518444_451340f76c_z_d.jpg "Vienna")
+
+![landscape](https://farm1.staticflickr.com/371/18745798981_75e61d1237_z_d.jpg "The Rathaus")
+Wednesday was my last full day in Vienna so I went to the MuseumsQuartier to visit _mumok_ - the museum of modern art. It had everything from David Hockney ([pleased to see him labelled as "Bradford, Yorkshire"](https://twitter.com/RTWbike/status/606073606028853249)) to Yoko Ono to videos of naked bodies having paint thrown at them. Outside the MuseumsQuartier was a [vegan festival](https://twitter.com/RTWbike/status/606152094505177089) and I had a very nice vegan curry with lassi. As I left the festival I saw a young woman on a zebra-stripe bike adorned with roses. She told me it was some kind of pun as the German words for zebra and bike are similar.
+
+![landscape](https://farm1.staticflickr.com/329/19265119170_d07d1de406_z_d.jpg "mumok")
+
+![landscape](https://farm1.staticflickr.com/410/19446385132_8713f1fb95_z_d.jpg "zebra bike")
