--- a/blog/2015011.md
+++ b/blog/2015011.md
@@ -19,7 +19,7 @@ At Vernon I decided to jump to the other side of the Seine where the map showed 
 
 ![landscape](https://farm9.staticflickr.com/8829/17595492622_657b22e967.jpg "meadow")
 
-![landscape](https://farm1.staticflickr.com/419/19265069469_08d66b88d5_z_d.jpg "Church)
+![landscape](https://farm1.staticflickr.com/419/19265069469_08d66b88d5_z_d.jpg "Church")
 
 ![landscape](https://farm1.staticflickr.com/279/18828723294_482a9dd8f4_z_d.jpg "Vernon")
 
