--- a/blog/2015027.md
+++ b/blog/2015027.md
@@ -13,7 +13,7 @@ I left Altheim at 2pm already worried I'd been taking things too slow. Especiall
 
 After a few days of relative flatness it did indeed get more hilly. This is mostly because Stevens kept a pretty direct line east rather than following the curve of the river. I got pretty exhausted just before Haag am Haustruck due to a big climb. It did result it a stunning view to the north and gave me a freewheel down into Haag which I managed to reach by 5pm. That still left me 24 hours behind. After loading up on drinks and sweets at the shop I decided to press on the extra miles to Lambach. 
 
-![landscape](https://www.flickr.com/photos/astronomyblog/18114781593/sizes/l "Nearing Haag")
+![landscape](https://farm1.staticflickr.com/517/18114781593_3513bdde6c_z_d.jpg "Nearing Haag")
 
 ![landscape](https://farm1.staticflickr.com/487/18735499375_f14fda8627_z_d.jpg "Between Haag and Lambach")
 
