Adding leg to Hungary

--- a/blog/2015030.md
+++ b/blog/2015030.md
@@ -5,7 +5,15 @@ Date:	2015-06-03T22:00:00+0200
 
 The youth hostel I was staying at was on the large 'island' created by a split in the Danube. It was actually a few miles from most of the main tourist sites and seemed largely to be be visited by large school groups. As I sat on the floor in the reception area - the only place the wifi was available - an angry looking man came through the door. He gave me an evil looking stare as he went by. The hostel was huge so I reasoned that the chances of him being in the same room as me were small. A little later when I got back to the room I was pleased to find it empty. However, a few minutes later, he turned up. He was my room mate and he'd had a bit to drink. It turned out he'd missed his last train or bus home from Vienna. Thankfully he wasn't a beligerant drunk but he still made me nervous. I kept my important possessions (money, passport, phone) very close throughout the night. In the morning he left and I stayed in bed for a while.
 
-I was in a major capital city full of sights but I really needed to do some laundry. The hostel, despite its size, didn't have any laundry facilities. They told me of a laundrette two miles away. Thankfully I had a bike so that wasn't a worry for me. I did my washing. It is nice to have fresh smelling clothes. I also visited the supermarket. I was really living it up in Vienna.
+![landscape](https://farm1.staticflickr.com/267/18120713854_cb35f9ac7e_z_d.jpg "Graffitti near the youth hostel")
+
+![landscape](https://farm1.staticflickr.com/266/18832092643_49f9ba04fa_z_d.jpg "Graffitti near the Danube")
+
+![landscape](https://farm1.staticflickr.com/492/18717047016_0c316f5740_z_d.jpg "Danube with rising Moon")
+
+![landscape](https://farm1.staticflickr.com/362/18557178959_d67ca1fa7d_z_d.jpg "Danubian sunset")
+
+I was in a major capital city full of sights but I really needed to do some laundry. The hostel, despite its size, didn't have any laundry facilities. They told me of a laundrette two miles away. Thankfully I had a bike so that wasn't a worry for me. [I did my washing](https://twitter.com/RTWbike/status/605364839469461505). It is nice to have fresh smelling clothes. I also visited the supermarket. I was really living it up in Vienna.
 
 On Tuesday, I decided to visit the Vienna Wanderers' Bicycle Club as Stevens had done. The problem is that they don't exist any more and neither does the street they were on; Schwimmschulenstrasse. [Marie O'Sullivan on Twitter](https://twitter.com/Reesiepie/status/605425446864461825) managed to find out that it was near the station ([grid reference F3 in an old map of Vienna](http://www.retrobibliothek.de/retrobib/seite.html?id=116717&imageview=true)) only Schwimmschulenstrasse between 1873-1919. It was now Lassallestrasse. Even though the bicycle club didn't exist, I visited anyway and rode the length of the street. Afterwards I stumbled across an impromptu solar system scale model in the street near the station that was organised by the Zeiss Planetarium Wien. I then wandered over to the big wheel and had a ride through the large park. I then cycled over to the main part of the city and whiled away the afternoon snoozing in the pleasant Rathausplatz park near the Rathaus (town hall).
 
