--- a/blog/2015031.md
+++ b/blog/2015031.md
@@ -3,9 +3,9 @@ Title:	Three countries in a day
 Date:	2015-06-04T21:00:00+0200
 ---
 
-Last night I finally had an interactive room mate in the dorm. He was Donny from Wisconsin touring Europe. He seemed a bit fed up that the girls staying at the hostel were all in school groups and too young for him.
+Last night I finally had an interactive room mate in the dorm. He was Donny, from Wisconsin, and was touring Europe. He seemed a bit fed up that the girls staying at the hostel were all in school groups and too young for him.
 
-I left the hostel at 8.30 and it was suspiciously quiet. There was virtually no traffic on the streets. It was only when I found that the supermarket was closed that I realised that Stevens had warned me about this; it was Corpus Christi. I'd been banking on getting supplies for the day at the supermarket so now I had nowhere to get food or drink from. Eventually, on the way out of Vienna, I tracked down a water fountain and filled up my bottles.
+I left the hostel at 8.30 am and it was suspiciously quiet. There was virtually no traffic on the streets. It was only when I found that the supermarket was closed that I realised that Stevens had warned me about this; it was Corpus Christi. I'd been banking on getting supplies for the day at the supermarket so now I had nowhere to get food or drink from. Eventually, on the way out of Vienna, I tracked down a water fountain and filled up my bottles.
 
 Unfortunately the EV6 mostly takes the north bank of the river at this point but I had to go to Schwechat to follow Stevens. The roads weren't too bad - probably helped by the fact it was a holiday. That is the second capital city I've been lucky enough to be cycling in on a holiday. 
 
@@ -27,9 +27,9 @@ After passing one particularly large wind farm I found the Heidentor - an ancien
 
 I rode through quiet little villages filling my bottle up at water fountains. As the path got closer to the Danube I started to be joined by a few families out for a ride on the holiday. At Hainburg I found the 900 year old archway that Stevens described. There were no rows of Hungarian soliders lining the streets this Corpus Christie though. That tradition seems to be long gone. At the other side of Hainburg old town I found another archway. That left me wondering if I'd be admiring the wrong one before. I took a picture with this one too just to be safe.
 
-![landscape](https://farm1.staticflickr.com/279/19265188778_06719cc0cc_z_d.jpg)
+![landscape](https://farm1.staticflickr.com/279/19265188778_06719cc0cc_z_d.jpg "Austria")
 
-![landscape](https://farm1.staticflickr.com/462/19452758135_d59419fbea_z_d.jpg)
+![landscape](https://farm1.staticflickr.com/462/19452758135_d59419fbea_z_d.jpg "Hainburg")
 
 ![portrait](https://farm1.staticflickr.com/315/18555618748_a948ec6533_z_d.jpg "Archway in Hainburg")
 
@@ -57,8 +57,12 @@ With a separate bike lane I was bowling along at a good pace but also able to ad
 
 ![landscape](https://farm1.staticflickr.com/418/18122866203_361f84d816_z_d.jpg "Purple fields")
 
-![landscape](https://farm1.staticflickr.com/351/18120897174_3f4158712e_z_d.jpg)
+![landscape](https://farm1.staticflickr.com/351/18120897174_3f4158712e_z_d.jpg "More purple fields")
 
-Just before 5 o'clock I reached the little village of Bezenye and took a picture of the church as the bells rang out. A little old lady who lived opposite the church saw me, smiled and waved. I smiled back and tried to say something to her but either she was hard of hearing or didn't understand English so just sort of nodded at me smiling. I waved and carried on. At Mosonmagyar&ograve;v&agrave;r I managed to find a camping pitch at the Thermal Hotel Aqua. The campsite area was mostly motorhomes and, like the RVs of America, their occupants didn't seem interested in talking to cyclists with tents.
+Just before 5 o'clock I reached the little village of Bezenye and took a picture of the church as the bells rang out. A little old lady who lived opposite the church saw me, smiled and waved. I smiled back and tried to say something to her but either she was hard of hearing or didn't understand English so just sort of nodded at me smiling. I waved and carried on. 
 
-When I checked in the lady at the desk didn't really have enough English but seemed to tell me I had to come back for the spa at 8pm. I assumed they must have some kind of allotted times and mine was later as I'd arrived late in the day. At 7.55pm I duly turned up only to discover that it closed at 8pm. She'd been trying to tell me that but had only managed to communicate the importance of 8pm. Seeing that I'd lost out, a man who'd been sitting out at the front looking through paperwork came over to help me. He was some kind of cross between a manager, a bouncer and a janitor. Whatever his role, he seemed kind and beckoned for me to follow him. It turned out I could use the small swimming pool/spa until 10pm so I was able to relax in their thermal waters after all. It meant I got a bath and a shower!
+![portrait](https://farm1.staticflickr.com/369/18122848513_6e34dc9813_z_d.jpg "Church in Bezenye")
+
+At Mosonmagyar&ograve;v&agrave;r I managed to find a camping pitch at the Thermal Hotel Aqua. The campsite area was mostly motorhomes and, like the RVs of America, their occupants didn't seem interested in talking to cyclists with tents.
+
+When I checked in the lady at the desk didn't really have enough English but seemed to tell me I had to come back for the spa at 8pm. I assumed they must have some kind of allotted times and mine was later as I'd arrived late in the day. At 7.55 pm I duly turned up only to discover that it closed at 8 pm. She'd been trying to tell me that but had only managed to communicate the importance of 8 pm. Seeing that I'd lost out, a man who'd been sitting out at the front looking through paperwork came over to help me. He was some kind of cross between a manager, a bouncer and a janitor. Whatever his role, he seemed kind and beckoned for me to follow him. It turned out I could use the small swimming pool/spa until 10 pm so I was able to relax in their thermal waters after all. It meant I got a bath and a shower!
