Adding first full day in Hungary

--- a/blog/2015031.md
+++ b/blog/2015031.md
@@ -63,6 +63,8 @@ Just before 5 o'clock I reached the little village of Bezenye and took a picture
 
 ![portrait](https://farm1.staticflickr.com/369/18122848513_6e34dc9813_z_d.jpg "Church in Bezenye")
 
-At Mosonmagyar&ograve;v&agrave;r I managed to find a camping pitch at the Thermal Hotel Aqua. The campsite area was mostly motorhomes and, like the RVs of America, their occupants didn't seem interested in talking to cyclists with tents.
+At Mosonmagyar&oacute;v&aacute;r my first task was to get some money. I found an ATM but then panicked when the withdrawal screen offered me amounts like 10,000 florins. I didn't know the exchange rate. Would I be emptying my bank account? A quick text to my niece in London brought me the answer. There were around 400 florins in a British pound. Having got my money I then spotted a sign for camping and found a pitch at the Thermal Hotel Aqua. The campsite area was mostly motorhomes and, like the RVs of America, their occupants didn't seem interested in talking to cyclists with tents.
 
 When I checked in the lady at the desk didn't really have enough English but seemed to tell me I had to come back for the spa at 8pm. I assumed they must have some kind of allotted times and mine was later as I'd arrived late in the day. At 7.55 pm I duly turned up only to discover that it closed at 8 pm. She'd been trying to tell me that but had only managed to communicate the importance of 8 pm. Seeing that I'd lost out, a man who'd been sitting out at the front looking through paperwork came over to help me. He was some kind of cross between a manager, a bouncer and a janitor. Whatever his role, he seemed kind and beckoned for me to follow him. It turned out I could use the small swimming pool/spa until 10 pm so I was able to relax in their thermal waters after all. It meant I got a bath and a shower!
+
+I learned that the Hungarian for thank you sounds like "ger-ser-nam".
