Add note about swimming

--- a/blog/2015032.md
+++ b/blog/2015032.md
@@ -21,7 +21,9 @@ Over into the main square I had a rest and then had a man come up to me, present
 
 I decided to follow the "official" bike map as it showed a route to G&ouml;ny&#369; that avoided the motorway. Unfortunately, it took me along the 1 which then preceded to have lots of signs along it saying no bikes! This was the town's advertised cycle route and you can't cycle on it. I started to think that Hungary wasn't very joined up. Having no alternative road other than the motorway, I ignored the signs and pressed on. I had to keep ignoring them until somewhere near &Aacute;cs. 
 
-After Kom&aacute;rom the route seemed to go off the 1, closer to the river. This took me along a dyke wall and into a wood where the path turned into a, well, footpath. I spotted a lovely little secluded beach just off the path. I was just under five miles from Neszm&eacute;ly - Stevens' destination for tonight - and I decided, as I didn't know if there would be camping ahead, to camp here for tonight. I pitched my tent on the pebble beach, cooked some food, and admired the glorius sunset over the Danube from my little spot. I wasn't entirely alone - I could hear occasional sounds from the far side of the river in Slovakia - but it still felt exciting. I was also without internet as my sim card decided it wouldn't let me have roaming in Hungary. In the evening I heard two teenage lads making their way down to my little beach from the path but when they saw my tent they went somewhere else. As the stars came out I watched the lights of the river cruise boats making their way up and down the river. It was as close to perfect as I could get.
+After Kom&aacute;rom the route seemed to go off the 1, closer to the river. This took me along a dyke wall and into a wood where the path turned into a, well, footpath. I spotted a lovely little secluded beach just off the path. I was just under five miles from Neszm&eacute;ly - Stevens' destination for tonight - and I decided, as I didn't know if there would be camping ahead, to camp here for tonight.
+
+I pitched my tent on the pebble beach, had a quick swim in the Danube, cooked some food, and admired the glorius sunset from my little spot. I wasn't entirely alone - I could hear occasional sounds from the far side of the river in Slovakia - but it still felt exciting. I was also without internet as my sim card decided it wouldn't let me have roaming in Hungary. In the evening I heard two teenage lads making their way down to my little beach from the path but when they saw my tent they went somewhere else. As the stars came out I watched the lights of the river cruise boats making their way up and down the river. It was as close to perfect as I could get.
 
 ![landscape](https://farm1.staticflickr.com/401/18746050081_1e5825ef8b_z_d.jpg "Wild camp by the Danube")
 
