Escape special characters

--- a/blog/2015010.md
+++ b/blog/2015010.md
@@ -19,9 +19,9 @@ On the ride out of Dieppe I stopped at a small petrol station where I bought a p
 
 ![landscape](https://farm1.staticflickr.com/480/19455363461_d6eeb0d7fd_z_d.jpg "Old barn")
 
-By late morning I reached Clères and purchased some cheese, fruit and bread from the lovely local shops. On back roads, following advice from an expat Brit, I had amazing scenery. Through the Forêt Verte my knee was no fan of the hills but the scenery made up for it.
+By late morning I reached Cl&egrave;res and purchased some cheese, fruit and bread from the lovely local shops. On back roads, following advice from an expat Brit, I had amazing scenery. Through the For&ecirc;t Verte my knee was no fan of the hills but the scenery made up for it.
 
-![portrait](https://farm1.staticflickr.com/346/18830498283_ebe2f5d009_z_d.jpg "Clères")
+![portrait](https://farm1.staticflickr.com/346/18830498283_ebe2f5d009_z_d.jpg "Cl&egrave;res")
 
 ![landscape](https://farm4.staticflickr.com/3783/19263569680_08e1a91c53_z_d.jpg "Countryside")
 
