--- a/blog/2015025.md
+++ b/blog/2015025.md
@@ -21,14 +21,14 @@ Following the Inn Trail I caught up with Michel and Connie - a German couple spe
 
 ![portrait](https://farm1.staticflickr.com/390/19445765122_f4e5df1160_z_d.jpg "Flat tree")
 
-At Muldorf I said goodbye to Michel and Connie and joined the trail again as I had another 10 miles to Altötting. About half way there I took my phone out for a picture and found the screen had mysteriously cracked. Disaster! It would no longer respond. I was stranded without communication.
+At Muldorf I said goodbye to Michel and Connie and joined the trail again as I had another 10 miles to Alt&ouml;tting. About half way there I took my phone out for a picture and found the screen had mysteriously cracked. Disaster! It would no longer respond. I was stranded without communication.
 
-Arriving in Altötting I pushed past the closed shops selling crucifixes and assorted paraphernalia - just as Stevens had.
+Arriving in Alt&ouml;tting I pushed past the closed shops selling crucifixes and assorted paraphernalia - just as Stevens had.
 
 I slumped down in the main square utterly dejected. There were people around but I didn't know if they spoke English. I walked to the train station but the trains were only once an hour to Mulhdorf. What could I do? I found a pay phone and called one of the three numbers I can remember. I'm not sure what help I was expecting from my sister but 2 Euros wasn't enough time to say much. I tried the police station but they seemed closed. Eventually I saw a sign welcoming ebikes so I went into the little guesthouse. The waitress/owner was in traditional Austrian costume and busy with customer orders. She didn't speak English other than to tell me to wait a moment. Ten minutes later a young man emerged from the kitchen with enough English to establish that I wanted a "zimmer" for the night. At this point, a man at the bar who had been watching proceedings helped out with considerably more English. He was Franz - an Austrian who worked at a hydro plant on the river. He listened to my story about my trip and my broken phone and said he would take me to a local shop in Neuoettling in the morning to see if it could be fixed. After calming down my panic he recommended some things on the menu to deal with my hunger.
 
-![portrait](https://farm1.staticflickr.com/497/19264513978_ffe7b1d2be_z_d.jpg "Fountain in Altötting")
+![portrait](https://farm1.staticflickr.com/497/19264513978_ffe7b1d2be_z_d.jpg "Fountain in Alt&ouml;tting")
 
 I'd massively overspent my daily budget and the resolution would have to wait until morning. My confidence incompleting the trip unaided by the internet and without my copy of the book and places I needed to visit was shaken. This could be the end.
 
-![landscape](https://farm1.staticflickr.com/432/19264576728_098591350a_z_d.jpg "Main square in Altötting")
+![landscape](https://farm1.staticflickr.com/432/19264576728_098591350a_z_d.jpg "Main square in Alt&ouml;tting")
