--- a/blog/2015026.md
+++ b/blog/2015026.md
@@ -7,6 +7,6 @@ I was up early as Franz was going to pick me up at 8am. My phone alarm went off 
 
 ![landscape](https://farm4.staticflickr.com/3731/19264522208_ff58610c93_z_d.jpg "Franz")
 
-I spent the morning and afternoon wandering around Altötting failing to find free WiFi that works so I could update the phone software. I currently have a half functioning phone which is an improvement at least. I will now catch up on sleep and try to get an early start tomorrow to catch up on the day's cycling I've missed.
+I spent the morning and afternoon wandering around Alt&ouml;tting failing to find free WiFi that works so I could update the phone software. I currently have a half functioning phone which is an improvement at least. I will now catch up on sleep and try to get an early start tomorrow to catch up on the day's cycling I've missed.
 
-![panorama](https://farm1.staticflickr.com/384/19552148002_36c2fedbe9_k_d.jpg "Altötting main square")
+![panorama](https://farm1.staticflickr.com/384/19552148002_36c2fedbe9_k_d.jpg "Alt&ouml;tting main square")
