--- a/blog/2015027.md
+++ b/blog/2015027.md
@@ -3,7 +3,7 @@ Title:	Imperial century
 Date:	2015-05-29T21:00:00+0200
 ---
 
-After leaving the Gasthaus I went to find toilet and discovered a huge car park, under kapellplatz, built in 1983. I left Altötting and headed for the Inn river trail again. It was nice to be on it so early and I cheerily said "hallo" to those on bikes going in the opposite direction. [I passed through Marktl](https://twitter.com/RTWbike/status/604214617796136960) where the last pope - the one who resigned - had been born. At Simbach am Inn I headed into the town centre to see what was there. Not a lot it turned out except for some free WiFi in the main square and I discovered [it was twinned with Skipton](https://twitter.com/RTWbike/status/604215009867079680) in North Yorkshire. 
+After leaving the Gasthaus I went to find toilet and discovered a huge car park, under kapellplatz, built in 1983. I left Alt&ouml;tting and headed for the Inn river trail again. It was nice to be on it so early and I cheerily said "hallo" to those on bikes going in the opposite direction. [I passed through Marktl](https://twitter.com/RTWbike/status/604214617796136960) where the last pope - the one who resigned - had been born. At Simbach am Inn I headed into the town centre to see what was there. Not a lot it turned out except for some free WiFi in the main square and I discovered [it was twinned with Skipton](https://twitter.com/RTWbike/status/604215009867079680) in North Yorkshire. 
 
 ![landscape](https://farm1.staticflickr.com/441/18738235312_b5beee2579_z_d.jpg "The bridge at Simbach am Inn over into Austria")
 
