--- a/blog/2015033.md
+++ b/blog/2015033.md
@@ -1,5 +1,5 @@
 ---
-Title:	Budapest
+Title:	To Budapest
 Date:	2015-06-06T23:00:00+0200
 ---
 
@@ -40,3 +40,5 @@ At V&aacute;c I had a while to wait for the ferry and joined Richard and Andre -
 I then headed along a bike route of various quality - sometimes great and sometimes awful - into Budapest. Coming into Budapest I met my first aggressively beeping driver of the trip. He wanted me to be in the cycle lane. So did I but the big fence between me and it meant I couldn't. As was becoming familiar on this trip, road and building works had removed cycle paths in places or re-routed them in ways that were difficult to follow for a visitor. Still, I got into Budapest and found free wifi at a Shell petrol station. Someone had told me that petrol stations were a reliable place to get wifi in this part of Europe. 
 
 Online I found a youth hostel on the other side of the river so headed across. Although it was upstairs on the first floor, Adam the guy on duty was very friendly and helpful so let me bring my bike upstairs. It was the first hostel since the UK that had a kitchen I could actually make use of so I cooked dinner and made a cup of tea. It was a good, international, hostel with guests from Hungary, Mexico, Thailand, the Phillipines and Scotland. The Scottish guy had arrived back at the hostel but had lost his phone. I spent the rest of the evening helping him cancel his phone, contact people back in the UK and sort out his insurance. He also had to reset a lot of his online passwords.
+
+![portrait](https://farm1.staticflickr.com/475/18832533433_1278fd17cb_z_d.jpg "Scottish backpacker")
