--- a/blog/2015034.md
+++ b/blog/2015034.md
@@ -3,9 +3,9 @@ Title:	Budapest
 Date:	2015-06-07T20:00:00+0200
 ---
 
-In Budapest [Thomas Stevens visited the National Exhibition of 1885](http://www.strudel.org.uk/blog/stevens/000169.shtml#blog). I'd seen a [painting by R&oacute;ber N&aacute;dler of the exhibition](http://commons.wikimedia.org/wiki/File%3AN%C3%A1dler_National_Exhibition_in_Budapest_in_1885.jpg) and wanted to find it. I biked over to Heroe's Square where I found a tourist office. The tourist office said the building looked a bit like one of the train stations but then did some sleuthing online (they had an advantage over me as they could read Hungarian). It turned out that the building had been damaged during World War II and was subsequently destroyed. Even without the building I was still able to walk around the park area, sit under the trees and wander around a food festival (although I couldn't get food as it looked like you needed a Mastercard).
+In Budapest [Thomas Stevens visited the National Exhibition of 1885](http://www.strudel.org.uk/blog/stevens/000169.shtml#blog). I'd seen a [painting by R&oacute;ber N&aacute;dler of the exhibition](http://commons.wikimedia.org/wiki/File%3AN%C3%A1dler_National_Exhibition_in_Budapest_in_1885.jpg) and wanted to find it. I biked over to Heroes' Square where I found a tourist office. The tourist office said the building looked a bit like one of the train stations but then did some sleuthing online (they had an advantage over me as they could read Hungarian). It turned out that the building had been damaged during World War II and was subsequently destroyed. Even without the building I was still able to walk around the park area, sit under the trees and wander around a food festival (although I couldn't get food as it looked like you needed a Mastercard).
 
-![landscape](https://farm1.staticflickr.com/352/19265591668_9163a70da4_z_d.jpg "Heroe's Square")
+![landscape](https://farm1.staticflickr.com/352/19265591668_9163a70da4_z_d.jpg "Heroes' Square")
 
 Feeling hungry, I headed back towards the centre of the city. On the way I found an all-you-can-eat Hungarian bistro. The lady at the front seemed as though she couldn't care less about my custom. When I asked what it consisted of she said "Hungarian food" and pointed to the back of the room. I had a look and thought it looked OK but wasn't sure what to do. Do I wait to be seated? Do I just pick up a plate and help myself?
 
