--- a/blog/2015037.md
+++ b/blog/2015037.md
@@ -1,5 +1,5 @@
 ---
-Title:	Everyone is awesome
+Title:	Everything is awesome
 Date:	2015-06-10T20:00:00+0200
 ---
 
@@ -17,10 +17,24 @@ It was already afternoon when I rolled out of Szeksz&aacute;rd (singing "Every~~
 
 ![landscape](https://farm1.staticflickr.com/547/19265761038_bac795ed71_z_d.jpg "Natural bike parking")
 
+![panorama](https://pbs.twimg.com/media/CHOpFiIWMAAJ_r1.jpg:large "Corn. Corn. Corn. It is like being back in the US mid west.")
+
 It was great to be back on the EV6 even if occasional cars drove down it (ignoring the "no car" signs). As I reached Baja I found a huge Tesco where my hunter-gatherer mode kicked in and I stocked up on high-calorie food as I didn't know what to expect in Croatia. Every little helps.
 
 ![landscape](https://farm1.staticflickr.com/479/19447024252_d9c34a61d9_z_d.jpg "Cycling on the EV6 - I put my camera on a post and used the 10 second timer")
 
+![landscape](https://farm1.staticflickr.com/435/19447031872_905823cb07_z_d.jpg "A cycling club out on a ride near Baja")
+
+![landscape](https://farm1.staticflickr.com/278/19457621611_e372e7f8cf_z_d.jpg "EV6")
+
+![landscape](https://farm4.staticflickr.com/3668/19267217369_e65206d481_z_d.jpg "Village")
+
+![landscape](https://farm1.staticflickr.com/365/19447055892_e196e58111_z_d.jpg "Fisherman")
+
 At Dunaflava I had missed the day's last ferry to Dunaszekcs&#337; where Stevens had stayed at Igali's house. Dunaszekcs&#337; would have to wait until tomorrow morning. I saw a "rooms for cyclists" sign in English which was promising. It turned out to be a nice guest house for cyclists on the EV6. I had a shower and then enjoyed "grapefruit beer" and a homemade lemonade courtesy of Susan and William whose house it was. They showed me their impressive vegetable garden and I sampled their cherry, apple, & apricot p&aacute;linka.
+
+![portrait](https://pbs.twimg.com/media/CHOp6GmWQAArIDI.jpg "Susan and Willam")
+
+![landscape](https://pbs.twimg.com/media/CHOp7QlWQAEDOXo.jpg "Firey p&aacute;linka")
 
 After the hard slog and exhaustion of yesterday, today has been lovely.
