--- a/blog/2015038.md
+++ b/blog/2015038.md
@@ -23,6 +23,8 @@ I followed the EV6 to the border where I met my first passport control since Die
 
 Unfortunately I had to leave the EV6 on a road route to go to Branjin Vrh which I still can't pronounce. After a rather busy road I headed to "the Duke's vineyard" - Kne&#382;evi Vinogradi - and then south along the EV6 on-road route to Osijek.
 
+![landscape](https://pbs.twimg.com/media/CHOqNnBUUAEQjwu.jpg:large "A Croatian's home is their castle. Literally. With crenellations on top.")
+
 I rode over the bridge, through the old town, heading for the centre. I was earlier than normal and wanted to find the Tourist Information Office to ask about campsites. At the main square I saw the cathedral and then the familiar "i". Inside I said hello and the lady at the desk told me there was no camping but there was a hostel. Then she said I'd be better in a different place that was about the same price but I wouldn't have to take my bike upstairs. She rang ahead an booked me in. I then started telling her about the reason for my trip and that Thomas Stevens had been here for two days because it had rained. This caught the attention of her colleague, Mislav, who asked if he could photograph me for their Facebook group. We chatted some more and then insisted that I should come back to them tomorrow if I had any questions. With that friendly encounter I headed off to the room.
 
 ![landscape](https://farm1.staticflickr.com/280/19265893900_69e10c70ac_z_d.jpg "Osijek Tourist Information Office")
