--- a/blog/2015039.md
+++ b/blog/2015039.md
@@ -35,4 +35,4 @@ I headed back around to admire the fortifications of the old town before crossin
 
 ![landscape](https://pbs.twimg.com/media/CHT9hjgWwAAKcgZ.jpg "Perkelt on the Drava")
 
-Altogether I have had a fantastic time in Osijek. That is down to the lovely people I've met here.
+Altogether I have had a fantastic time in Osijek and I won't foget the lovely people I've met.
