--- a/blog/2015011.md
+++ b/blog/2015011.md
@@ -23,7 +23,7 @@ At Vernon I decided to jump to the other side of the Seine where the map showed 
 
 ![landscape](https://farm1.staticflickr.com/279/18828723294_482a9dd8f4_z_d.jpg "Vernon")
 
-In trying to find accommodation for the night, Google Maps was only showing expensive options. The reason for this became obvious when I arrived in Giverny home of Claud Monet. It is now a tourist trap and half the voices in the little Street were American. With a small daily budget I limited myself to just visiting Money's house and garden rather than the Impressionist Museum too. The flower and water gardens were particularly fragrant and pretty.
+In trying to find accommodation for the night, Google Maps was only showing expensive options. The reason for this became obvious when I arrived in Giverny home of Claude Monet. It is now a tourist trap and half the voices in the street were American. With a small daily budget I limited myself to just visiting Money's house and garden rather than the Impressionist Museum too. The flower and water gardens were particularly fragrant and pretty.
 
 ![landscape](https://farm1.staticflickr.com/475/19263715580_74ec8109b8_z_d.jpg "Rue Claude Monet")
 
