--- a/blog/2015011.md
+++ b/blog/2015011.md
@@ -3,7 +3,7 @@ Title:	Impressionist
 Date:	2015-05-13T21:00:00+0200
 ---
 
-Today was an early start as Pierre and Marie had to take the children to school. As I had to visit Thomas Stevens' locations I had to go back over the Seine to Elbeuf then I tried my best to stay on small, quiet, roads (all very well paved) where possible through Gaillon to Vernon. My knee seemed to be bearing up surprisingly well. Pierre and Marie's magic cream must have helped. 
+Today was an early start as my hosts - Pierre and Marie - had to take the children to school. As my task is to visit the locations visited by Thomas Stevens, I had to go back over the Seine to Elbeuf. Then I tried my best to stay on small, quiet, roads (all very well paved) where possible through Gaillon to Vernon. My knee seemed to be bearing up surprisingly well. Pierre and Marie's magic cream must have helped. 
 
 ![landscape](https://farm1.staticflickr.com/285/19444867192_3c6c00d086_z_d.jpg "Cleon")
 
@@ -23,7 +23,7 @@ At Vernon I decided to jump to the other side of the Seine where the map showed 
 
 ![landscape](https://farm1.staticflickr.com/279/18828723294_482a9dd8f4_z_d.jpg "Vernon")
 
-In trying to find accommodation for the night, Google Maps was only showing expensive options. The reason for this became obvious when I arrived in Giverny home of Claude Monet. It is now a tourist trap and half the voices in the street were American. With a small daily budget I limited myself to just visiting Money's house and garden rather than the Impressionist Museum too. The flower and water gardens were particularly fragrant and pretty.
+In trying to find accommodation for the night, Google Maps was only showing expensive options. The reason for this became obvious when I arrived in Giverny home of Claude Monet. It is now a tourist trap and half the voices in the street were American. With my limited daily budget I only visited Money's house and garden rather than the Impressionist Museum too. The flower and water gardens were particularly fragrant and pretty.
 
 ![landscape](https://farm1.staticflickr.com/475/19263715580_74ec8109b8_z_d.jpg "Rue Claude Monet")
 
@@ -37,7 +37,7 @@ In trying to find accommodation for the night, Google Maps was only showing expe
 
 ![landscape](https://farm1.staticflickr.com/334/19263704510_8d4605cfb3_z_d.jpg "The lilly pond")
 
-Leaving the flowers behind I headed for  a campsite Les Groux which had looked like being €20 online but the friendly lady at reception only charged me €10 as I was alone and without a car.
+Leaving the flowers behind I headed for  a campsite Les Groux which had looked like being &euro;20 online but the friendly lady at reception only charged me &euro;10 as I was alone and without a car.
 
 After pitching my tent I met Leonard and Clotilde who were cycling on a tandem from Rouen to Versailles as a practice for cycling to the south of France later in the summer. They gave me magic pomade for my knee and told me about their ride from Edinburgh to Brighton last year. It was great to talk to them and they helped cheer me up some more. A large fraction of long distance cycling is the mental attitude and a combination of my knee pain, the worry over languages, money, and the difficulties ahead had been affecting me. Since New Haven I'd decided to limit my sights to Paris as I could get the train home from there if I felt terrible.
 
