--- a/blog/2015008.md
+++ b/blog/2015008.md
@@ -7,7 +7,7 @@ On Saturday morning I said goodbye to my friend Tracey and headed out of Surbito
 
 I thought hitting National Cycle Network 21 would cheer me up but its constant stopping and starting, the endless give ways, the traffic lights that wouldn't change for bikes and the poor signage in places brought my mood down more. After winding through Gatwick airport I got to NCN 20 which went through woods and had gates that proved tough for a bike with panniers.
 
-![landscape](https://farm1.staticflickr.com/464/19264807179_eab88094b7_z_d.jpg)
+![landscape](https://farm1.staticflickr.com/464/19264807179_eab88094b7_z_d.jpg "View from the road")
 
 With 21 miles to go to Brighton I had to stop for a rest as my knee was becoming painful. It had been getting worse since day two. I was no longer sure I'd get to Brighton never mind Istanbul. On another eight painful miles I stopped at a bluebell-filled wood. [I sat down amongst the bluebells](https://twitter.com/RTWbike/status/597063923809067008) for food and juice. I gave two deer a surprise - and them, me - as they bounded around me.
 
