--- a/blog/2015008.md
+++ b/blog/2015008.md
@@ -23,7 +23,7 @@ The final miles were slow going but the cycle lane quality improved approaching 
 
 ![landscape](https://farm4.staticflickr.com/3883/18830416843_4046d56c07_z_d.jpg "Brighton")
 
-This morning (Sunday) I had a second shower to get my £18 worth of site fees and then visited the Brighton medical centre to see a nurse about my knee. Nothing was torn but I was prescribed some anti-inflammatories to help and told to rest it. My plan to keep to Stevens' ferry timetable was out.
+This morning (Sunday) I had a second shower to get my &pound;18 worth of site fees and then visited the Brighton medical centre to see a nurse about my knee. Nothing was torn but I was prescribed some anti-inflammatories to help and told to rest it. My plan to keep to Stevens' ferry timetable was out.
 
 I was able to check into the YHA tonight and had a slow walk along the seafront taking in the famous pier and sitting on the pebble beach. I sat with a bag of ice on my knee until it melted.
 
