--- a/blog/2015009.md
+++ b/blog/2015009.md
@@ -15,6 +15,6 @@ I sped down into New Haven and ended up in the town centre when I lost the route
 
 Graham recommended a book - __Between the Woods and the Water__ - and I sat in the library opposite reading it until closing time. Then I trundled towards the ferry terminal where I bumped into Janet - a 70 year old cycle tourer going to the Pyrenees then Austria and the Netherlands! We were both getting the 23:00 ferry so we kept each other company with stories from our trips, advice from Janet about the route, and general chit chat. By the time of the ferry another 5 cyclists had turned up (3 in a group and 2 individuals). The advantage of the overnight ferry is no need to pay for accommodation but the disadvantage is trying to sleep in a chair for 5 hours. 
 
-At 5am local time we arrived bleary-eyed. Janet, myself and another cyclist named Ian decided to ride into Dieppe together and wait for dawn. We talked over coffee and, once we felt it was light enough, said our goodbyes and headed our separate ways. Ian was meeting a friend and Janet was - heading along the __Avenue Verte__.
+At 5am local time we arrived bleary-eyed. Janet, myself and another cyclist named Ian decided to ride into Dieppe together and wait for dawn. We talked over coffee and, once we felt it was light enough, said our goodbyes and headed our separate ways. Ian was meeting a friend and Janet was heading along the __Avenue Verte__.
 
 ![landscape](https://farm1.staticflickr.com/289/19424971986_f4e3ff1b02_z_d.jpg "Janet and Ian")
